# StringAlgorithmsAnalysis

./: Analytics.xlsx  CMakeLists.txt  NaiveResultsWithoutBreak.csv  README.md  RawData.csv  main.cpp
Algorithms/: KMPAlgorithm.cpp  KMPAlgorithm.h  KMPOptimizedAlgorithm.cpp  KMPOptimizedAlgorithm.h  NaiveAlgorithm.cpp  NaiveAlgorithm.h
Utils/FileUtils/: CSVWriter.cpp
Utils/InterfaceUtils/: ConsoleInputReader.cpp  InfoPrinter.cpp
Utils/StringAlgorithmUtils/: AlgorithmExecutor.cpp  AlgorithmsInfo.cpp  ResultChecker.cpp  StringGenerator.cpp
Utils/TimeUtils/: TimerGuard.cpp  TimerGuard.h
